--- a/index.html
+++ b/index.html
@@ -46,5 +46,9 @@
                     </div>
         </div>
     </section>
+
+    <footer>
+        <h2>Pretty cool</h2>
+    </footer>
 </body>
 </html>
