--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
     <footer>
         <h2>Pretty cool</h2>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
