--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
 
 <body>
     <header>
-        <h1>Welcome to Parallax</h1>
+        <h1>Picture of Margaret</h1>
     </header>
 
     <section class="about">
         <div class="about-title">
-            <h2>About Me</h2>
+            <h2>Margaret Ann Cubie</h2>
         </div>
         <!-- where the three pages are being scrolled starts below -->
         <div class="about-pages">
             <div>
-                <h2>Project 1</h2>
+                <h2>Life</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis facilis facere harum impedit amet
                     suscipit laudantium nam, exercitationem esse quidem inventore saepe doloribus quos eum, rem hic
                     cupiditate obcaecati. Ducimus earum debitis numquam nostrum qui quas recusandae ipsum sint dolor
                     atque cupiditate quos excepturi, nam vero consequuntur unde sapiente iste?</p>
             </div>
             <div>
-                    <h2>Project 2</h2>
+                    <h2>Processional</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis facilis facere harum impedit amet
                         suscipit laudantium nam, exercitationem esse quidem inventore saepe doloribus quos eum, rem hic
                         cupiditate obcaecati. Ducimus earum debitis numquam nostrum qui quas recusandae ipsum sint dolor
                         atque cupiditate quos excepturi, nam vero consequuntur unde sapiente iste?</p>
                 </div>
                 <div>
-                        <h2>Project 3</h2>
+                        <h2>Eulogy</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis facilis facere harum impedit amet
                             suscipit laudantium nam, exercitationem esse quidem inventore saepe doloribus quos eum, rem hic
                             cupiditate obcaecati. Ducimus earum debitis numquam nostrum qui quas recusandae ipsum sint dolor
@@ -48,7 +48,7 @@
     </section>
 
     <footer>
-        <h2>Pretty cool</h2>
+        <h2>Collage</h2>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
