--- a/index.html
+++ b/index.html
@@ -24,18 +24,31 @@
         <!-- where the three pages are being scrolled starts below -->
         <div class="about-pages">
             <div>
-                <h2>Project 1</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis facilis facere harum impedit amet
-                    suscipit laudantium nam, exercitationem esse quidem inventore saepe doloribus quos eum, rem hic
-                    cupiditate obcaecati. Ducimus earum debitis numquam nostrum qui quas recusandae ipsum sint dolor
-                    atque cupiditate quos excepturi, nam vero consequuntur unde sapiente iste?</p>
+                <h2>Mission Statement</h2>
+                <p>Welcome to Quartz Queen Yoga! My mission is to provide a comfortable environment for all students. Yoga can be a
+                personal journey and rather cringe-worthy if you're nervous about attending your first class or even being sweaty around
+                others. No worries here, let me guide you through your practice peppered with lame jokes. At QQY I encourage sangha
+                (community) and learning. I make time and space for students to ask questions about yoga and connect with other students
+                in a personable environment.
+                    <br><br>
+                The goal of QQY is for everyone to become at peace with your body as I guide you through each Hatha yoga practice,
+                whether you’re a first-time yogi or a Yoga Master. By the end of practice, you’ll be ready to hop up, leaving all your
+                insecurities on the mat.</p>
             </div>
             <div>
-                    <h2>Project 2</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis facilis facere harum impedit amet
-                        suscipit laudantium nam, exercitationem esse quidem inventore saepe doloribus quos eum, rem hic
-                        cupiditate obcaecati. Ducimus earum debitis numquam nostrum qui quas recusandae ipsum sint dolor
-                        atque cupiditate quos excepturi, nam vero consequuntur unde sapiente iste?</p>
+                    <h2>Class Offerings</h2>
+                    <p>Quartz Queen Yoga offers semi-private and private hatha yoga classes, giving individualized attention and instruction
+                    while delivering a customized level of yoga teaching.
+                    <br><br>
+                    Quartz’ Align & Flow Class crafted with the beginner in mind while accommodating intermediate and experienced students.
+                    Focuses on the staple yoga postures, breath and teaching proper alignment. Props and modifications are offered for an
+                    easeful class.
+                    <br><br>
+                    Magnetic Meditation There is energy all around us, take a moment to align with that energy using meditation. Class
+                    consists of a beginning breath work then progressing into guided mindfulness meditation.
+                    <br><br>
+                    Lava Strength Class designed to get your muscles moving and the sweat dripping. This class moves through the more
+                    intermediate to advanced yoga postures at a faster pace.</p>
                 </div>
                 <div>
                         <h2>Project 3</h2>
@@ -48,7 +61,10 @@
     </section>
 
     <footer>
-        <h2>Pretty cool</h2>
+        <h2>Contact Me</h2>
+        <p>See anything that you have a question about or you’re interested in taking a private, group or corporate class with me?</p>
+        <p>QuartzQueenYoga@outlook.com
+                248-631-4992</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
