added contact form from cognito

--- a/index.html
+++ b/index.html
@@ -61,10 +61,15 @@
     </section>
 
     <footer>
-        <h2>Contact Me</h2>
-        <p>See anything that you have a question about or you’re interested in taking a private, group or corporate class with me?</p>
-        <p>QuartzQueenYoga@outlook.com
-                248-631-4992</p>
+            <div class="cognito">
+                <div class="contact">
+                    <p>See anything that you have a question about or you’re interested in taking a private, group or corporate class with me?</p>
+                    <p>QuartzQueenYoga@outlook.com
+                            248-631-4992</p>
+                </div>
+                    <script src="https://services.cognitoforms.com/s/upZ67pYyrE6tac2Hc6mgRw"></script>
+                    <script>Cognito.load("forms", { id: "1" });</script>
+                    </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
