--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     <link
         href="https://fonts.googleapis.com/css?family=Crimson+Text|Hepta+Slab|Inconsolata|Lora|Merriweather|Montserrat|Playfair+Display|Poppins&display=swap"
         rel="stylesheet">
-    <title>Parallax</title>
+    <title>QuartzQueenYoga</title>
+    <!--
+        Author: Christa Stephens
+        Date: 10/15/2019
+        Style Parallax
+    -->
 </head>
 
 <body>
     <header>
         <h1>Welcome to Parallax</h1>
+        <!-- Maybe a sliding carousel below -->
+        <!-- <img src="/images/qqylogo.png" alt="logo"> -->
     </header>
 
     <section class="about">
@@ -25,54 +32,67 @@
         <div class="about-pages">
             <div>
                 <h2>Mission Statement</h2>
-                <p>Welcome to Quartz Queen Yoga! My mission is to provide a comfortable environment for all students. Yoga can be a
-                personal journey and rather cringe-worthy if you're nervous about attending your first class or even being sweaty around
-                others. No worries here, let me guide you through your practice peppered with lame jokes. At QQY I encourage sangha
-                (community) and learning. I make time and space for students to ask questions about yoga and connect with other students
-                in a personable environment.
+                <p>Welcome to Quartz Queen Yoga! My mission is to provide a comfortable environment for all students.
+                    Yoga can be a
+                    personal journey and rather cringe-worthy if you're nervous about attending your first class or even
+                    being sweaty around
+                    others. No worries here, let me guide you through your practice peppered with lame jokes. At QQY I
+                    encourage sangha
+                    (community) and learning. I make time and space for students to ask questions about yoga and connect
+                    with other students
+                    in a personable environment.
                     <br><br>
-                The goal of QQY is for everyone to become at peace with your body as I guide you through each Hatha yoga practice,
-                whether you’re a first-time yogi or a Yoga Master. By the end of practice, you’ll be ready to hop up, leaving all your
-                insecurities on the mat.</p>
+                    The goal of QQY is for everyone to become at peace with your body as I guide you through each Hatha
+                    yoga practice,
+                    whether you’re a first-time yogi or a Yoga Master. By the end of practice, you’ll be ready to hop
+                    up, leaving all your
+                    insecurities on the mat.</p>
             </div>
             <div>
-                    <h2>Class Offerings</h2>
-                    <p>Quartz Queen Yoga offers semi-private and private hatha yoga classes, giving individualized attention and instruction
+                <h2>Class Offerings</h2>
+                <p>Quartz Queen Yoga offers semi-private and private hatha yoga classes, giving individualized attention
+                    and instruction
                     while delivering a customized level of yoga teaching.
                     <br><br>
-                    Quartz’ Align & Flow Class crafted with the beginner in mind while accommodating intermediate and experienced students.
-                    Focuses on the staple yoga postures, breath and teaching proper alignment. Props and modifications are offered for an
+                    Quartz’ Align & Flow Class crafted with the beginner in mind while accommodating intermediate and
+                    experienced students.
+                    Focuses on the staple yoga postures, breath and teaching proper alignment. Props and modifications
+                    are offered for an
                     easeful class.
                     <br><br>
-                    Magnetic Meditation There is energy all around us, take a moment to align with that energy using meditation. Class
+                    Magnetic Meditation There is energy all around us, take a moment to align with that energy using
+                    meditation. Class
                     consists of a beginning breath work then progressing into guided mindfulness meditation.
                     <br><br>
-                    Lava Strength Class designed to get your muscles moving and the sweat dripping. This class moves through the more
+                    Lava Strength Class designed to get your muscles moving and the sweat dripping. This class moves
+                    through the more
                     intermediate to advanced yoga postures at a faster pace.</p>
-                </div>
-                <div>
-                        <h2>Project 3</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis facilis facere harum impedit amet
-                            suscipit laudantium nam, exercitationem esse quidem inventore saepe doloribus quos eum, rem hic
-                            cupiditate obcaecati. Ducimus earum debitis numquam nostrum qui quas recusandae ipsum sint dolor
-                            atque cupiditate quos excepturi, nam vero consequuntur unde sapiente iste?</p>
-                    </div>
+            </div>
+            <div>
+                <h2>Project 3</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis facilis facere harum impedit amet
+                    suscipit laudantium nam, exercitationem esse quidem inventore saepe doloribus quos eum, rem hic
+                    cupiditate obcaecati. Ducimus earum debitis numquam nostrum qui quas recusandae ipsum sint dolor
+                    atque cupiditate quos excepturi, nam vero consequuntur unde sapiente iste?</p>
+            </div>
         </div>
     </section>
 
     <footer>
-            <div class="cognito">
-                <div class="contact">
-                    <p>See anything that you have a question about or you’re interested in taking a private, group or corporate class with me?</p>
-                    <p>QuartzQueenYoga@outlook.com
-                            248-631-4992</p>
-                </div>
-                    <script src="https://services.cognitoforms.com/s/upZ67pYyrE6tac2Hc6mgRw"></script>
-                    <script>Cognito.load("forms", { id: "1" });</script>
-                    </div>
+        <div class="cognito">
+            <div class="contact">
+                <p>See anything that you have a question about or you’re interested in taking a private, group or
+                    corporate class with me?</p>
+                <p>QuartzQueenYoga@outlook.com
+                    248-631-4992</p>
+            </div>
+            <script src="https://services.cognitoforms.com/s/upZ67pYyrE6tac2Hc6mgRw"></script>
+            <script>Cognito.load("forms", { id: "1" });</script>
+        </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
